--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://monerkotha-api1.onrender.com/api/"
+  "proxy": "https://monerkotha-api1.onrender.com/"
 }
