--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://monerkotha-be.onrender.com"
+  "proxy": "https://monerkotha-be.onrender.com/api"
 }
